--- a/veri_ayiklama.ipynb
+++ b/veri_ayiklama.ipynb
@@ -1615,11 +1615,266 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 144,
    "id": "b94daf6f",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['12.000', '16.000', '200', '18.000', '45.000', '35.000', '25.000',\n",
+       "       '22.000', '15.000', '24.000', '240.000', '1.200.000', '30.000',\n",
+       "       '20.000', '180.000', '60.000', '10.500', '10.000', '55.000',\n",
+       "       '13.000', '12.500', '21.000', '250.000', '190.000', '42.500',\n",
+       "       '17.000', '11.000', '450.000', '27.500', '80.000', '23.000',\n",
+       "       '550.000', '19.750', '75.000', '50.000', '34.000', '19.500',\n",
+       "       '28.500', '24.500', '325.000', '28.000', '29.000', '750.000',\n",
+       "       '600.000', '16.750', '500.000', '14.000', '220.000', '19.000',\n",
+       "       '21.500', '350.000', '9.000', '14.500', '25.500', '18.500',\n",
+       "       '300.000', '480.000', '150.000', '5.000', '16.500', '525.000',\n",
+       "       '370.000', '13.750', '17.500', '27.000', '11.500', '200.000',\n",
+       "       '90.000', '64.000', '15.750', '118.000', '1.000.000', '400.000',\n",
+       "       '70.000', '13.500', '210.000', '38.000', '1.800.000', '31.500',\n",
+       "       '57.500', '49.900', '2.000', '4.875.000', '8.500', '700.000',\n",
+       "       '15.250', '7.000', '40.000', '18.750', '22.500', '1.250.000',\n",
+       "       '3.500', '32.000', '104.000', '1.600.000', '120.000', '20.500',\n",
+       "       '650.000', '65.000', '48.000', '850.000', '17.250', '48.500',\n",
+       "       '100.000', '22.500.000', '115.000', '57.000', '53.000', '66.000',\n",
+       "       '12.950', '62.000', '265.000', '18.250', '185.000', '41.000',\n",
+       "       '110.000', '26.900', '17.750', '62.500', '130.000', '7.500',\n",
+       "       '33.000', '29.999', '14.750', '37.000', '16.200', '275.000',\n",
+       "       '26.000', '8.000', '375.000', '8.250', '39.500', '98.500',\n",
+       "       '46.000', '28.900', '9.250', '58.000', '15.900', '10.757',\n",
+       "       '85.000', '10.750', '1.400.000', '175.000', '460.000', '29.500',\n",
+       "       '13.250', '20.999', '31.000', '9.500', '15.500', '56.000',\n",
+       "       '14.700', '269.900', '14.100', '530.000', '16.250', '49.000',\n",
+       "       '36.500', '225.000', '6.500', '17.950', '10.900', '8.750',\n",
+       "       '620.000', '140.000', '9.750', '125.000', '24.750', '2.550.000',\n",
+       "       '1.000', '6.000', '95.000', '37.500', '7.250', '43.000', '5.500',\n",
+       "       '83.000', '380.000', '280.000', '350', '4.500', '800.000',\n",
+       "       '39.000', '21.750', '235.000', '96.000', '1.100.000', '425.000',\n",
+       "       '52.500', '19.360', '4.000', '9.800', '680.000', '15.590.000',\n",
+       "       '34.500', '170.000', '26.500', '18.450', '1.650.000', '23.500',\n",
+       "       '365.000', '36.000', '10.400', '10.999', '160.000', '7.950',\n",
+       "       '785.000', '2.250.000', '260.000', '13.900.000', '165.000',\n",
+       "       '2.500', '290.000', '300', '475.000', '9.999', '9.200', '330.000',\n",
+       "       '2.265.000', '590.000', '23', '29.750', '14.250', '1.050.000',\n",
+       "       '1.750.000', '415.000', '430.000', '11.111', '720.000', '625.000',\n",
+       "       '1.350.000', '15.950', '14.999', '195.000', '8.000.000',\n",
+       "       '1.025.000', '67.000', '900.000', '1.500', '14.990', '950.000',\n",
+       "       '270.000', '3.000', '10.800', '13.950', '780.000', '320.000',\n",
+       "       '1.250', '63.000', '1.200', '675.000', '8.950', '760.000',\n",
+       "       '420.000', '13', '67.500', '12', '26.750', '4.950', '440.000',\n",
+       "       '15', '390.000', '1.725.000', '7.800', '7.750', '12.750',\n",
+       "       '16.500.000', '11.250', '7.900', '12.850', '11.750', 7.5, 4.5,\n",
+       "       10.0, 8.0, 19.0, 6.5, 18.5, 9.5, 7.0, 12.0, 6.0, 8.5, 15.0, 9.0,\n",
+       "       7.75, 6.75, 16.5, 20.0, 22.0, 7.25, 21.0, 14.0, '4.250', '5.250',\n",
+       "       '6.750', '6.600', '5.100', '5.600', '9.850', '26.000.000', '3.400',\n",
+       "       '14.300', '8.700', '9.950.000', '120.000.000', '111', '11',\n",
+       "       '890.000', '42.000', '4.650.000', '1.700', '8.550', '8.900',\n",
+       "       '7.200', '3.500.000', '11.900', '1.190.000', '1.840.000', '6.250',\n",
+       "       '8.100', '750', '7.999', '3.999', '6.900', '5.750', '7.400',\n",
+       "       '6.999', '1.850.000', '7.100', '6.800', '5.700', '9.900', '4.999',\n",
+       "       '4.750', '5.999', '8.400', '8.300', '44.000', '740.000',\n",
+       "       '2.500.000', '360.000', '105.000', '355.000', '255.000', '72.000',\n",
+       "       '1', '485.000', '285.000', '59.500', '245.000', '4.050.000',\n",
+       "       '135.000', '32.500', '510.000', '1.225.000', '3.900.000', '3.250',\n",
+       "       '30.000.000', '39.900', '243.000', '2.300.000', '25.000.000',\n",
+       "       '49.950', '73.000', '840.000', '2.275.000', '410.000', '310.000',\n",
+       "       '7.300', '32.750', '3.750', '3.000.000', '1.700.000', '1.150.000',\n",
+       "       '2.750', '4.100', '16.350', '17.000.000', '921.180', '145.000',\n",
+       "       '41.600', '495.000', '65.500', '2.250', '595.000', '19.800',\n",
+       "       '54.000', '50.000.000', '48.000.000', '465.000', '860.000',\n",
+       "       '630.000', '995.000', '241.800', '340.000', '4.450.000',\n",
+       "       '6.500.000', '2.175.000', '2.000.000', '2.200.000', '6.150.000',\n",
+       "       '16.400', '295.000', '1.070.000', '87.000', '1.750', '875.000',\n",
+       "       '560.000', '3.250.000', '790.000'], dtype=object)"
+      ]
+     },
+     "execution_count": 144,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"list-view-price\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "2df199d0",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df[\"list-view-price\"] = df[\"list-view-price\"].astype(str).apply(lambda x: x.replace(\".\", \"\"))\n",
+    "df[\"price\"] = df[\"list-view-price\"].astype(int)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "c330205a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([    12000,     16000,       200,     18000,     45000,     35000,\n",
+       "           25000,     22000,     15000,     24000,    240000,   1200000,\n",
+       "           30000,     20000,    180000,     60000,     10500,     10000,\n",
+       "           55000,     13000,     12500,     21000,    250000,    190000,\n",
+       "           42500,     17000,     11000,    450000,     27500,     80000,\n",
+       "           23000,    550000,     19750,     75000,     50000,     34000,\n",
+       "           19500,     28500,     24500,    325000,     28000,     29000,\n",
+       "          750000,    600000,     16750,    500000,     14000,    220000,\n",
+       "           19000,     21500,    350000,      9000,     14500,     25500,\n",
+       "           18500,    300000,    480000,    150000,      5000,     16500,\n",
+       "          525000,    370000,     13750,     17500,     27000,     11500,\n",
+       "          200000,     90000,     64000,     15750,    118000,   1000000,\n",
+       "          400000,     70000,     13500,    210000,     38000,   1800000,\n",
+       "           31500,     57500,     49900,      2000,   4875000,      8500,\n",
+       "          700000,     15250,      7000,     40000,     18750,     22500,\n",
+       "         1250000,      3500,     32000,    104000,   1600000,    120000,\n",
+       "           20500,    650000,     65000,     48000,    850000,     17250,\n",
+       "           48500,    100000,  22500000,    115000,     57000,     53000,\n",
+       "           66000,     12950,     62000,    265000,     18250,    185000,\n",
+       "           41000,    110000,     26900,     17750,     62500,    130000,\n",
+       "            7500,     33000,     29999,     14750,     37000,     16200,\n",
+       "          275000,     26000,      8000,    375000,      8250,     39500,\n",
+       "           98500,     46000,     28900,      9250,     58000,     15900,\n",
+       "           10757,     85000,     10750,   1400000,    175000,    460000,\n",
+       "           29500,     13250,     20999,     31000,      9500,     15500,\n",
+       "           56000,     14700,    269900,     14100,    530000,     16250,\n",
+       "           49000,     36500,    225000,      6500,     17950,     10900,\n",
+       "            8750,    620000,    140000,      9750,    125000,     24750,\n",
+       "         2550000,      1000,      6000,     95000,     37500,      7250,\n",
+       "           43000,      5500,     83000,    380000,    280000,       350,\n",
+       "            4500,    800000,     39000,     21750,    235000,     96000,\n",
+       "         1100000,    425000,     52500,     19360,      4000,      9800,\n",
+       "          680000,  15590000,     34500,    170000,     26500,     18450,\n",
+       "         1650000,     23500,    365000,     36000,     10400,     10999,\n",
+       "          160000,      7950,    785000,   2250000,    260000,  13900000,\n",
+       "          165000,      2500,    290000,       300,    475000,      9999,\n",
+       "            9200,    330000,   2265000,    590000,        23,     29750,\n",
+       "           14250,   1050000,   1750000,    415000,    430000,     11111,\n",
+       "          720000,    625000,   1350000,     15950,     14999,    195000,\n",
+       "         8000000,   1025000,     67000,    900000,      1500,     14990,\n",
+       "          950000,    270000,      3000,     10800,     13950,    780000,\n",
+       "          320000,      1250,     63000,      1200,    675000,      8950,\n",
+       "          760000,    420000,        13,     67500,        12,     26750,\n",
+       "            4950,    440000,        15,    390000,   1725000,      7800,\n",
+       "            7750,     12750,  16500000,     11250,      7900,     12850,\n",
+       "           11750,        75,        45,       100,        80,       190,\n",
+       "              65,       185,        95,        70,       120,        60,\n",
+       "              85,       150,        90,       775,       675,       165,\n",
+       "             220,       725,       210,       140,      4250,      5250,\n",
+       "            6750,      6600,      5100,      5600,      9850,  26000000,\n",
+       "            3400,     14300,      8700,   9950000, 120000000,       111,\n",
+       "              11,    890000,     42000,   4650000,      1700,      8550,\n",
+       "            8900,      7200,   3500000,     11900,   1190000,   1840000,\n",
+       "            6250,      8100,       750,      7999,      3999,      6900,\n",
+       "            5750,      7400,      6999,   1850000,      7100,      6800,\n",
+       "            5700,      9900,      4999,      4750,      5999,      8400,\n",
+       "            8300,     44000,    740000,   2500000,    360000,    105000,\n",
+       "          355000,    255000,     72000,         1,    485000,    285000,\n",
+       "           59500,    245000,   4050000,    135000,     32500,    510000,\n",
+       "         1225000,   3900000,      3250,  30000000,     39900,    243000,\n",
+       "         2300000,  25000000,     49950,     73000,    840000,   2275000,\n",
+       "          410000,    310000,      7300,     32750,      3750,   3000000,\n",
+       "         1700000,   1150000,      2750,      4100,     16350,  17000000,\n",
+       "          921180,    145000,     41600,    495000,     65500,      2250,\n",
+       "          595000,     19800,     54000,  50000000,  48000000,    465000,\n",
+       "          860000,    630000,    995000,    241800,    340000,   4450000,\n",
+       "         6500000,   2175000,   2000000,   2200000,   6150000,     16400,\n",
+       "          295000,   1070000,     87000,      1750,    875000,    560000,\n",
+       "         3250000,    790000])"
+      ]
+     },
+     "execution_count": 146,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[\"price\"].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "4b972e25",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_columns(df, [\"list-view-price\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 148,
+   "id": "0b11af4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['city', 'district', 'neighborhood', 'room', 'living_room', 'area',\n",
+       "       'age', 'floor', 'price'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 148,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 149,
+   "id": "a07c06ba",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 8136 entries, 0 to 8135\n",
+      "Data columns (total 9 columns):\n",
+      " #   Column        Non-Null Count  Dtype \n",
+      "---  ------        --------------  ----- \n",
+      " 0   city          8136 non-null   object\n",
+      " 1   district      8136 non-null   object\n",
+      " 2   neighborhood  8136 non-null   object\n",
+      " 3   room          8136 non-null   int32 \n",
+      " 4   living_room   8136 non-null   int32 \n",
+      " 5   area          8136 non-null   int32 \n",
+      " 6   age           8136 non-null   int32 \n",
+      " 7   floor         8136 non-null   int32 \n",
+      " 8   price         8136 non-null   int32 \n",
+      "dtypes: int32(6), object(3)\n",
+      "memory usage: 381.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "9e0d631f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv(\"data.csv\", index=False)"
+   ]
   }
  ],
  "metadata": {
