Add custom evaluation metrics for model predictions

--- a/regression.ipynb
+++ b/regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ccb7d400",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "27769b0b",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1e3a7612",
    "metadata": {},
    "outputs": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "61dd0245",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "a9c96410",
    "metadata": {},
    "outputs": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "f347f526",
    "metadata": {},
    "outputs": [],
@@ -1327,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "868f65a2",
    "metadata": {},
    "outputs": [
@@ -2049,7 +2049,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "8757000a",
    "metadata": {},
    "outputs": [
@@ -2073,6 +2073,50 @@
     "    \"floor\": [3]\n",
     "})\n",
     "print(model.predict(new_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "6e74cfb4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def tolerance_r2(y_true, y_pred, tolerance):\n",
+    "    residuals = y_pred - y_true\n",
+    "    residuals[np.abs(residuals) <= tolerance] = 0\n",
+    "    ssr = np.sum(residuals**2)\n",
+    "    sst = np.sum((y_true - np.mean(y_true))**2)\n",
+    "    return 1 - (ssr/sst)\n",
+    "\n",
+    "def tolerance_percentage_r2(y_true, y_pred, tolerance):\n",
+    "    residuals = y_pred - y_true\n",
+    "    residuals[np.abs(residuals) / y_true <= tolerance] = 0\n",
+    "    ssr = np.sum(residuals**2)\n",
+    "    sst = np.sum((y_true - np.mean(y_true))**2)\n",
+    "    return 1 - (ssr/sst)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "9b39c326",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5584039311773256\n",
+      "0.6865100204337766\n",
+      "0.7671439434567897\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(r2_score(y_test, y_pred))\n",
+    "print(tolerance_r2(y_test, y_pred, 10000))\n",
+    "print(tolerance_percentage_r2(y_test, y_pred, 0.50))"
    ]
   }
  ],
